--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -55,6 +55,7 @@
             android:textColorHint="@color/text_gray" />
 
         <LinearLayout
+            android:id="@+id/message_ll"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
